--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.material-symbols-rounded {
+  font-family: "Material Symbols Rounded Variable";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+}
+
+.monaco-editor {
+  // Makes dynamic resizing of monaco editor work, see https://stackoverflow.com/a/71876526
+  position: absolute !important;
+}
